# atlas

./: .gitmodules  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
atlas-core/: README.md  atlas.py  atlas_test.py  gen.py  genpack.py  log.yaml
atlas-core/fbs/: Booking.fbs
atlas-core/interfaces/: atlas.car.qface  atlas.car.yaml  atlas.comics.dc.qface  atlas.comics.marvel.qface  atlas.common.qface  atlas.common.yaml  atlas.test.qface  atlas.test.yaml
atlas-genpack-cpp/: filters.py  genpack_cpp.py
atlas-genpack-cpp/src/: IServiceServer.h  IStruct.h  common.cpp  common.h
atlas-genpack-cpp/templates/: CMakeLists.common.tpl.txt  CMakeLists.system.tpl.txt  CMakeLists.tpl.txt  Enum.tpl.cpp  Enum.tpl.h  Interface.tpl.cpp  Interface.tpl.h  Struct.tpl.cpp  Struct.tpl.h
atlas-genpack-htmldoc/: genpack_htmldoc.py
atlas-genpack-htmldoc/templates/: Index.tpl.html
examples/cpp/: CMakeLists.txt
examples/cpp/cmake/: ExternalProjects.cmake
examples/cpp/src/: Service.cpp  Service.h  main.cpp
scripts/: deps.sh  go.sh
